criando estilo dos textos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="text_title_music">Música</string>
     <string name="text_title_walking">Caminhada</string>
     <string name="text_title_tab_view_pager">Dica</string>
-    <string name="text_title_toolbar_home">Home</string>
+    <string name="text_title_toolbar_home">Dicas de bem estar</string>
     <string name="text_title_toolbar_moods">Moods</string>
     <string name="text_title_moods">Como você está se sentindo hoje?</string>
     <string name="text_hint_edit_text_moods">Digite aqui</string>
